@@ -77,6 +77,11 @@ namespace libtorrent
 		proxy_settings const& get_proxy_settings() { return m_proxy_settings; }
 
 		bool is_closed() const { return m_abort; }
+		tcp::endpoint local_endpoint() const
+		{
+			udp::endpoint ep = m_ipv4_sock.local_endpoint();
+			return tcp::endpoint(ep.address(), ep.port());
+		}
 
 	protected:
 
